quick fix to z-index issue.

--- a/client/familyhistorydatabase/app/styles/navaside.scss
+++ b/client/familyhistorydatabase/app/styles/navaside.scss
@@ -80,7 +80,7 @@ hr {
   width: 250px;
   position: fixed;
   height: 100%;
-  z-index: 1002;
+  z-index: 1114;
   @include transition(0.4s);
   font-weight: bold;
 }
@@ -200,7 +200,6 @@ hr {
   top: 0px;
   left: 0px;
   right: 0px;
-  z-index: 1114;
   min-width: 300px;
 }
 
@@ -269,7 +268,6 @@ hr {
   max-width: 250px;
   margin-left: -250px;
 }
-
 
 .sidebar-nav .dropdown.open{
   margin-top: -1px;
